# Brave_Browser___brave-core

./: .gitattributes  .gitignore  BUILD.gn  DEPS  Jenkinsfile  package-lock.json  package.json  tsconfig.json
.storybook/: main.js
android/: brave_java_resources.gni  brave_java_sources.gni
android/java/: AndroidManifest.xml  apk_for_test.flags
app/: app_management_strings.grdp  brave_generated_resources.grd  brave_main_delegate_browsertest.cc  brave_settings_strings.grdp  brave_strings.grd  brave_strings_override.grd  generated_resources.grd  generated_resources_override.grd  nearby_share_strings.grdp  os_settings_strings.grdp  password_manager_ui_strings.grdp  settings_brave_strings.grdp  settings_strings.grdp  settings_strings_override.grdp  shared_settings_strings.grdp
app/vector_icons/: BUILD.gn
app/win/: BUILD.gn
browser/: BUILD.gn  about_flags.cc  brave_app_controller_mac.h  brave_app_controller_mac.mm  brave_app_controller_mac_unittest.mm  brave_content_browser_client.cc  brave_drm_tab_helper.cc  brave_local_state_prefs.cc  brave_profile_prefs.cc  brave_resources_util_unittest.cc  brave_tab_helpers.cc  browser_context_keyed_service_factories.cc  sources.gni
browser/brave_adaptive_captcha/: brave_adaptive_captcha_service_factory.cc
browser/brave_ads/: ads_service_factory.cc  ads_service_impl.cc  ads_tab_helper.cc
browser/brave_rewards/: brave_rewards_service_factory.cc  brave_rewards_service_factory.h  rewards_service_factory.cc  sources.gni
browser/brave_stats/: brave_stats_tab_helper.cc
common/: sources.gni
components/: autofill_strings.grdp  permissions_strings.grdp
components/brave_shields/adblock/rs/: BUILD.gn  Cargo.toml
components/brave_shields/adblock/rs/src/: adblock_domain_resolver.h  convert.rs  engine.rs  lib.rs  result.rs
components/brave_vpn/browser/connection/ikev2/: BUILD.gn  brave_vpn_os_connection_api_base.cc  brave_vpn_os_connection_api_base.h  brave_vpn_os_connection_api_sim.cc  brave_vpn_os_connection_api_sim.h  brave_vpn_os_connection_api_unittest.cc
components/brave_vpn/browser/connection/ikev2/mac/: BUILD.gn  brave_vpn_os_connection_api_mac.h  brave_vpn_os_connection_api_mac.mm
components/brave_vpn/browser/connection/ikev2/win/: BUILD.gn  brave_vpn_os_connection_api_wg.cc  brave_vpn_os_connection_api_wg.h  brave_vpn_os_connection_api_win.cc  brave_vpn_os_connection_api_win.h  utils.cc  winvpntool.cc  wireguard_utils.cc  wireguard_utils.h
components/brave_vpn/browser/connection/ikev2/win/brave_vpn_helper/: service_main.h
components/brave_vpn/browser/connection/ikev2/win/brave_vpn_wireguard_service/: brave_vpn_wireguard_service.rc  brave_wireguard_manager.cc  brave_wireguard_manager.h  brave_wireguard_service_crash_reporter_client.cc  main.cc  scoped_sc_handle.h  service_constants.cc  service_constants.h  service_main.cc  service_utils.cc  service_utils.h  wireguard_tunnel_service.cc
components/brave_vpn/browser/connection/win/brave_vpn_service/: BUILD.gn  brave_vpn_service.cc  brave_vpn_service.h  brave_vpn_service.idl  brave_vpn_service.rc  brave_vpn_service.ver  brave_vpn_service_idl.idl  main.cc  scoped_sc_handle.h  service_constants.cc  service_constants.h  service_main.cc  service_main.h  service_utils.cc  service_utils.h  wireguard_tunnel_service.cc  wireguard_tunnel_service.h
components/brave_vpn/browser/connection/win/brave_vpn_wg_service/: BUILD.gn  main.cc  service_constants.h  service_utils.cc
components/brave_vpn/browser/connection/wireguard/win/: BUILD.gn  brave_vpn_os_connection_api_wg.cc  brave_vpn_os_connection_api_wg.h  wireguard_utils.cc
components/brave_vpn/browser/connection/wireguard/win/brave_vpn_wireguard_service/: BUILD.gn  brave_wireguard_manager.cc  main.cc  wireguard_tunnel_service.cc
components/futures/: BUILD.gn  future.h  future_join.h  future_unittest.cc  shared_future.h  shared_future_unittest.cc  shared_promise.h  shared_promise_unittest.cc
fuzzers/: BUILD.gn
patches/: base-BUILD.gn.patch  build-android-gyp-dex.py.patch  build-config-android-internal_rules.gni.patch  build-config-android-rules.gni.patch  build-toolchain-apple-toolchain.gni.patch  chrome-VERSION.patch  chrome-android-BUILD.gn.patch  chrome-android-chrome_java_sources.gni.patch  chrome-browser-BUILD.gn.patch  chrome-browser-about_flags.cc.patch  chrome-browser-buildflags.gni.patch  chrome-browser-chrome_content_browser_client.cc.patch  chrome-browser-first_party_sets-BUILD.gn.patch  chrome-browser-flags-android-chrome_feature_list.cc.patch  chrome-browser-prefs-browser_prefs.cc.patch  chrome-browser-renderer_context_menu-render_view_context_menu.cc.patch  chrome-browser-resources-settings-BUILD.gn.patch  chrome-browser-resources-settings-people_page-sync_controls.ts.patch  chrome-browser-resources-settings-settings.ts.patch  chrome-browser-ui-BUILD.gn.patch  chrome-browser-ui-android-toolbar-java-res-layout-toolbar_tablet.xml.patch  chrome-browser-ui-views-permissions-chip_controller.cc.patch  chrome-browser-ui-views-permissions-permission_prompt_bubble_view.cc.patch  chrome-browser-ui-views-tabs-tab_strip.cc.patch  chrome-browser-ui-webui-BUILD.gn.patch  chrome-browser-ui-webui-chrome_web_ui_controller_factory.cc.patch  chrome-browser-ui-webui-extensions-extensions_ui.cc.patch  chrome-browser-ui-webui-settings-settings_localized_strings_provider.cc.patch  chrome-browser-ui-webui-settings-site_settings_helper.cc.patch  chrome-browser-web_applications-os_integration-web_app_shortcut_mac.mm.patch  chrome-common-BUILD.gn.patch  chrome-installer-mini_installer-chrome.release.patch  chrome-installer-util-BUILD.gn.patch  chrome-renderer-BUILD.gn.patch  chrome-test-BUILD.gn.patch  chrome-test-data-webui-settings-BUILD.gn.patch  components-content_settings-browser-page_specific_content_settings.cc.patch  components-crash-core-browser-resources-crashes.ts.patch  components-omnibox-browser-BUILD.gn.patch  components-omnibox-browser-autocomplete_controller.cc.patch  (+31 more)
resources/: resource_ids.spec
script/: bootstrap.py  brave_license_helper.py  transpile-web-ui.py
test/: BUILD.gn
vector_icons/: leo_overrides.json
(+805 files in other folders)
