# Copyright (c) 2023 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at https://mozilla.org/MPL/2.0/. */

import("//testing/test.gni")

source_set("futures") {
  sources = [
    "future.h",
    "future_join.h",
    "shared_future.h",
    "shared_promise.h",
  ]

  deps = [
    "//base",
    "//third_party/abseil-cpp:absl",
  ]
}

source_set("future_tests") {
  testonly = true

  sources = [
    "future_join_unittest.cc",
    "future_unittest.cc",
    "shared_future_unittest.cc",
    "shared_promise_unittest.cc",
  ]

  deps = [
    ":futures",
    "//base/test:test_support",
  ]
}
