# Copyright (c) 2023 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at https://mozilla.org/MPL/2.0/.

import("//brave/build/rust/rust_cxx.gni")

rust_crate("rust_lib") {
  visibility = [ "//brave/components/brave_shields/adblock:rust_lib" ]

  inputs = [
    "Cargo.toml",
    "src/convert.rs",
    "src/engine.rs",
    "src/lib.rs",
    "src/result.rs",
  ]
}

rust_cxx("cxx") {
  input = [ "src/lib.rs" ]
  native_header_deps = [ ":domain_resolver" ]
}

source_set("domain_resolver") {
  visibility = [
    ":*",
    "//brave/components/brave_shields/common",
  ]
  sources = [ "src/adblock_domain_resolver.h" ]

  deps = [ "//brave/build/rust:cxx_cppdeps" ]
}
