[package]
name = "adblock-cxx"
version = "0.1.0"
edition = "2021"

[dependencies]
cxx = "1.0"
adblock = { git = "https://github.com/djandries/adblock-rust", default-features = false, features = ["full-regex-handling", "object-pooling", "unsync-regex-caching", "debug-info", "css-validation"] }
serde_json = "1.0"
thiserror = "1.0"

[features]
ios = ["adblock/content-blocking"]
single_thread_optimizations = ["adblock/object-pooling", "adblock/unsync-regex-caching"]

[lib]
name = "adblock_cxx"
crate-type = ["rlib"]
