
source_set("ikev2") {
  sources = [
    "brave_vpn_os_connection_api_base.cc",
    "brave_vpn_os_connection_api_base.h",
  ]
  deps = [
    "//base",
    "//brave/components/brave_vpn/browser/connection:api",
    "//brave/components/brave_vpn/common/mojom",
    "//brave/components/brave_vpn/browser/connection:common",
    "//brave/components/brave_vpn/common",
    "//services/network/public/cpp",
    "//brave/components/brave_vpn/browser/api",
    "//components/prefs"
  ]
}

source_set("sim") {
  testonly = true
  sources = [
    "brave_vpn_os_connection_api_sim.cc",
    "brave_vpn_os_connection_api_sim.h",
  ]

  deps = [
    "//brave/components/brave_vpn/browser/connection:api",
    "//brave/components/brave_vpn/browser/connection:common",
    "//base",
    "//brave/components/brave_vpn/common",
    "//components/version_info:channel",
    "//third_party/icu",
    "//brave//components/brave_vpn/browser/connection/ikev2"
  ]
}


source_set("unit_tests") {
  testonly = true

  sources = [ "brave_vpn_os_connection_api_unittest.cc" ]

  deps = [
    "//brave/components/brave_vpn/browser/connection:api",
    "//brave/components/brave_vpn/browser/connection:common",
    ":sim",
    "//brave/components/brave_vpn/browser",
    "//brave/components/brave_vpn/common",
    "//brave/components/brave_vpn/common/mojom",
    "//components/sync_preferences:test_support",
    "//content/test:test_support",
    "//services/network:test_support",
    "//testing/gtest",
    "//third_party/abseil-cpp:absl",
  ]
}
