# Copyright (c) 2022 The Brave Authors. All rights reserved.
# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this file,
# You can obtain one at https://mozilla.org/MPL/2.0/.

import("//brave/components/brave_vpn/common/buildflags/buildflags.gni")

assert(enable_brave_vpn)
assert(is_win)

source_set("utils") {
  sources = [
    "wireguard_utils.cc",
    "wireguard_utils.h",
  ]

  deps = [
    "//base",
    "//brave/components/brave_vpn/browser/connection:common",
    "//brave/components/brave_vpn/browser/connection/wireguard/win/brave_vpn_wireguard_service:common",
    "//brave/components/brave_vpn/common",
  ]
}

source_set("win") {
  visibility = [ "//brave/components/brave_vpn/browser/connection/*" ]

  sources = [
    "brave_vpn_os_connection_api_wg.cc",
    "brave_vpn_os_connection_api_wg.h",
  ]

  deps = [
    ":utils",
    "brave_vpn_wireguard_service",
    "//base",
    "//brave/components/brave_vpn/browser/connection:api",
    "//brave/components/brave_vpn/browser/api",
    "//brave/components/brave_vpn/browser/connection:common",
    "//brave/components/brave_vpn/common",
    "//brave/components/brave_vpn/common/mojom",
    "//components/prefs",
    "//net",
    "//services/network/public/cpp",
  ]
}
